<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Estadísticas Ruleta Americana</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ins1">Mesa 1</string>
    <string name="ins2">Mesa 2</string>
    <string name="ins3">Mesa 3</string>
    <string name="ins4">Mesa 4</string>
    <string name="estadistica1">Estadistica 1 </string>
    <string name="estadistica2">Estadistica 2 </string>
    <string name="estadistica3">Estadistica 3 </string>
    <string name="estadistica4">Estadistica 4 </string>
    <string name="borrar">Borrar Base de datos </string>
    <string name="pregunta_borrar">¿Quieres eliminar de forma permanente la información que contiene la base de datos?</string>
    <string name="Si">Sí</string>
    <string name="No">No</string>
    <string name="mesas">Insertar en:</string>
    <string name="insertarnum">Insertar número</string>
    <string name="vermesa">Comprobar números de la mesa</string>
    <string name="borrarseleccionados">Borrar los elementos seleccionados</string>
    

</resources>