<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".Inicial" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            
            <LinearLayout
              android:id="@+id/lytMain"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="top"
              android:layout_weight="1"
              android:gravity="top"
              android:orientation="vertical" >

        </LinearLayout>

<!--             <ImageView -->
<!--                 android:id="@+id/ima1" -->
<!--                 android:layout_width="200dp" -->
<!--                 android:layout_height="200dp" -->
<!--                 android:layout_gravity="center" -->
<!--                 android:src="@drawable/ruleta" /> -->

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/lblnum"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Button
                        android:id="@+id/btnborrar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/ic_input_delete" />
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow02"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/btn1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="1"
                        android:text="1" />

                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="2"
                        android:text="2" />

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="3"
                        android:text="3" />

                    <Button
                        android:id="@+id/btn4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="4"
                        android:text="4" />

                    <Button
                        android:id="@+id/btn5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="5"
                        android:text="5" />

                </TableRow>

                <TableRow
                    android:id="@+id/TableRow01"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <Button
                        android:id="@+id/btn6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="6"
                        android:text="6" />

                    <Button
                        android:id="@+id/btn7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="7"
                        android:text="7" />

                    <Button
                        android:id="@+id/btn8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="8"
                        android:text="8" />

                    <Button
                        android:id="@+id/btn9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="9"
                        android:text="9" />

                    <Button
                        android:id="@+id/btn0"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="0"
                        android:text="0" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <!-- <Spinner -->
                    <!-- android:id="@+id/spi1" -->
                    <!-- android:layout_width="0dp" -->
                    <!-- android:layout_height="wrap_content" -->
                    <!-- android:layout_weight="1" -->
                    <!-- android:prompt="@array/num" /> -->

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mesas" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <RadioGroup
                            android:id="@+id/radio_mesas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <RadioButton
                                android:id="@+id/radiomesa1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/ins1"
                                android:hint="1" />

                            <RadioButton
                                android:id="@+id/radiomesa2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ins2"
                                android:hint="2" />

                            <RadioButton
                                android:id="@+id/radiomesa3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ins3"
                                android:hint="3" />

                            <RadioButton
                                android:id="@+id/radiomesa4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ins4"
                                android:hint="4" />
                        </RadioGroup>
                    </LinearLayout>

                    <Button
                        android:id="@+id/btinsertar"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:text="@string/insertarnum" />

                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <Button
                        android:id="@+id/btvermesa"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/vermesa"/>
                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/btestadistica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ver estadisticas" />

            <TextView
                android:id="@+id/txLista"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btborrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ff0000"
                android:text="@string/borrar" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>